[project]
name = "donkeysim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stable-baselines3>=2.7.0",
    "tqdm>=4.67.1",
    "pygame>=2.0.0",
    "gym==0.22.0",
    "tensorboard>=2.20.0",
    "pufferlib>=3.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.16.3",
    "torchvision>=0.15.0",
    "av>=16.0.1",
]
